navin värin vaihto

--- a/tyylit.css
+++ b/tyylit.css
@@ -3,7 +3,7 @@
 /* navigaatio */
 /* taustan väri */
 .navbar-custom {
-    background-color: rgba(137,17,76,0.9);
+    background-color: rgba(127, 200, 132, 0.9);
 }
 
 /* brandin ja tekstin väri */
