--- a/tyylit.css
+++ b/tyylit.css
@@ -118,7 +118,7 @@ label.muoto{
     vertical-align: top;
 } 
 
-#otaYhteyttaLomake{
+/*#otaYhteyttaLomake{
     display:flex;  
     justify-content: center;
     align-content: center;
@@ -134,10 +134,25 @@ label.muoto{
     border-radius: 10px; 
     box-sizing: border-box; 
     resize: vertical 
+}*/
+
+#otaYhteyttaLomake {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    text-align: left;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 30px; 
+    background-color: #8f7e51;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 
-input[type=submit] {
+
+/*input[type=submit] {
     background-color:#766a57;
     color: white;
     padding: 12px 20px;
@@ -145,7 +160,20 @@ input[type=submit] {
     border-radius: 4px;
     cursor: pointer;
   }
+  */
 
+  input[type="text"], input[type="email"], input[type="tel"], textarea, select {
+    width: 100%; 
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+  }
+
+  textarea {
+    resize: vertical;
+}
 
     input[type=submit]:hover {
     background-color:#372e16;
