--- a/tyylit.css
+++ b/tyylit.css
@@ -112,7 +112,7 @@ p{
 }
 
 /*lomake*/
-/*label.muoto{
+label.muoto{
     display:inline-block;  
     width:6em;                        
     vertical-align: top;
@@ -174,36 +174,12 @@ p{
 
 ::placeholder {
     color:#766a57;
-    opacity: 1; /* Firefox 
+    opacity: 1; /* Firefox */
   }
   
-::-ms-input-placeholder { /* Edge 12 -18 
-    color:#766a57;
-  }*/
-
-  input[type="submit"], input[type="reset"] {
-    background-color: #766a57;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-/* Hover-efekti painikkeille */
-input[type="submit"]:hover, input[type="reset"]:hover {
-    background-color: #372e16;
-}
-
-/* Paikkamerkkitekstin väri */
-::placeholder {
-    color: #766a57;
-    opacity: 1; /* Firefox */
-}
-
 ::-ms-input-placeholder { /* Edge 12 -18 */
-    color: #766a57;
-}
+    color:#766a57;
+  }
 
 /* Mobiili-responsiivisuus */
 @media (max-width: 768px) {
